--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 <header class="page-header" role="banner">
     <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
     <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-    <a href="https://conor-mcavoy.github.io/" class="btn">Blog Home</a>]
+    <a href="https://conor-mcavoy.github.io/" class="btn">Blog Home</a>
     <a href="{{ site.github.repository_url }}" class="btn">GitHub</a>
 </header>
 
